@@ -1,3 +1,7 @@
+1999-07-17  Karsten Weiss  <karsten@addx.au.s.shuttle.de>
+
+	* de.po: Updated.
+
 1999-07-10  Tomas Ogren  <stric@ing.umu.se>
 
 	* sv.po: Updated.
