@@ -1,3 +1,7 @@
+1999-07-17  Karsten Weiss  <karsten@addx.au.s.shuttle.de>
+
+	* gE_prefs_box.c: (doc_page_new) Tagged two strings as translatable.
+
 Fri Jul  2 16:18:27 BST 1999  Alex Roberts  <bse@gedit.pn.org>
 
 	* README: Upped version number to 0.5.4. Also updated various parts
